# llm-claim-formalization

./: DETERMINISTIC_MODE.md  FACTUAL_VERIFICATION_EXPLAINED.md  HOW_IT_ACTUALLY_WORKS.md  LICENSE  README.md  RUN_UI.md  SUPPORT.md  VERIFIED_QA.md  demo_qa.py  demo_verified_qa.py  install.sh  pyproject.toml  run-demo.sh  run-example.sh  run-qa.sh  run-verified-qa.sh  test_claim_extraction.py  test_qa_interface.py  test_verified_qa_simple.py
.github/workflows/: nightly-live-eval.yml  quality-gate.yml
benchmarks/: README.md  evidence_corpus.jsonl  general_claims_eval.jsonl  live_thresholds.json  thresholds.json  user_questions_eval.jsonl  user_suite_live_thresholds.json  user_suite_thresholds.json
examples/: quickstart.py
paper/: llm_claim_formalization_workshop.md
scripts/: setup-ollama.sh
src/llm_claim_formalization/: __init__.py  qa_interface.py  verified_qa.py
src/llm_claim_formalization/backends/: __init__.py  ollama_backend.py  z3_backend.py
src/llm_claim_formalization/core/: __init__.py  adapters.py  evidence.py  extraction.py  ir.py  routing.py  verification.py
src/llm_claim_formalization/demo/: __main__.py  server.py
src/llm_claim_formalization/demo/static/: app.js  index.html  qa.html  style.css
src/llm_claim_formalization/eval/: __init__.py  cli.py  harness.py  user_cli.py  user_harness.py
tests/integration/: test_demo_api.py  test_eval_harness.py  test_insufficient_info.py  test_user_eval_harness.py
tests/regression/: test_route_regression.py
tests/unit/: test_adapter_registry.py  test_extraction.py  test_general_routes.py  test_ollama_backend.py  test_z3_backend.py
